--- a/skins/lagos.css
+++ b/skins/lagos.css
@@ -3,10 +3,10 @@ Skin Name: Lagos
 */
 
 
-body {text-align: left; background: #fff; color: #000; font-size: 12px; font-family: Helvetica, sans-serif; margin: 0; padding: 2em 0;}
+body {text-align: left; background: #fff; color: #000; font-size: 16px; font-family: Helvetica, sans-serif; margin: 0; padding: 2em 0;}
 
-h1 { font-size: 12px; margin: 0; float: left; text-transform: uppercase; font-weight: normal;}
-h2 { font-size: 12px; margin-bottom: 2em;}
+h1 { font-size: 16px; margin: 0; float: left; text-transform: uppercase; }
+h2 { font-size: 16px; margin-bottom: 2em;}
 h2 span {font-weight: lighter; padding-left: .5em;}
 
 a {color: #000; text-decoration: none;}
