--- a/skins/montreal.css
+++ b/skins/montreal.css
@@ -1,16 +1,16 @@
 /*  
-Skin Name: Istanbul
+Skin Name: Montreal
 */
 
 
-body {text-align: left; background: #fff; color: #000; font-size: 12px; font-family: Helvetica, sans-serif; margin: 0; padding: 2em 0;}
+body {text-align: left; background: #fff; color: #333; font-size: 16px; font-family: Helvetica, sans-serif; margin: 0; padding: 2em 0;}
 
-h1 { font-size: 12px; margin: 0; float: left; text-transform: uppercase; font-weight: normal;}
-h2 { font-size: 12px; margin-bottom: 2em;}
+h1 { font-size: 16px; margin: 0; float: left; text-transform: uppercase; font-weight: normal;}
+h2 { font-size: 16px; margin-bottom: 2em;}
 h2 span {font-weight: lighter; padding-left: .5em;}
 
-a {color: #000; text-decoration: none;}
-a:hover {color: #666;}
+a {color: #666; text-decoration: none;}
+a:hover {color: #333;}
 a img {border: 0;}
 
 .current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #3C6; text-transform: uppercase; }
@@ -46,10 +46,9 @@ a img {border: 0;}
 .simplepage {width: 500px; margin: auto; line-height: 2;}
 .randomimage {text-align: center; }
 
+.blank .gallerycontent {text-align: center; padding-bottom: 3em;}
+
 /* Slideshow*/
-
-.gallerycontent { margin-left: 3em;}
-
 
 #gallerywrapper, .gallery-fade {
 overflow: hidden;
@@ -94,3 +93,7 @@ a.next.inactive { background: url('../images/controls.png') -27px -24px;}
 .thumbnails .thumb {display: inline; cursor: pointer; }
 .thumbnails .thumb img {border: .5em solid #fff;}
 	
+.masonrythumbs {margin: auto; width: 870px;}
+.masonrythumbs .thumbnail {float: left; width: 250px; text-align: center; padding: 0 20px 15px 20px;}
+.masonrythumbs .thumbnail h3 {}
+.masonrythumbs .thumbnail h3 a {font-weight: normal;}
