--- a/skins/montreal.css
+++ b/skins/montreal.css
@@ -5,7 +5,7 @@ Skin Name: Montreal
 
 body {text-align: left; background: #fff; color: #333; font-size: 16px; font-family: Helvetica, sans-serif; margin: 0; padding: 2em 0;}
 
-h1 { font-size: 16px; margin: 0; float: left; text-transform: uppercase; font-weight: normal;}
+h1 { font-size: 16px; margin: 0 1em 0 0;  text-transform: uppercase; font-weight: normal; display: inline;}
 h2 { font-size: 16px; margin-bottom: 2em;}
 h2 span {font-weight: lighter; padding-left: .5em;}
 
@@ -13,14 +13,14 @@ a {color: #666; text-decoration: none;}
 a:hover {color: #333;}
 a img {border: 0;}
 
-.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #3C6; text-transform: uppercase; }
+.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #ff9999;}
 
-#header { padding: 0 2em 2em 2em; overflow: hidden; margin: auto; }
+#header { padding: 0 2em 2em 2em; overflow: hidden; margin: auto; text-align: center;}
+#header .menu-navigation-container {display: inline}
 
-#header ul { padding: 0; list-style: none; }
+#header ul { padding: 0; list-style: none; display: inline}
 #header ul li {margin: 0; display: inline; }
 
-#header ul { margin: 0 200px; text-align: center; }
 #header ul li {padding: 0 .8em; }
 .subnav ul li a { padding: .5em 0 .5em 1em; }
 
@@ -62,32 +62,11 @@ position: relative;
 .description p {margin: .5em 0 0 0; font-size: 11px;}
 
 #slidecontrols {text-align: center;}
-#slidecontrols span {display: none}
-
-#slidecontrols a {display: inline-block;}
-#slidecontrols a.prev { width: 12px; height: 12px; background: url('../images/controls.png') 0 0;}
-#slidecontrols a.thumbs { width: 13px; height: 12px; background: url('../images/controls.png') -13px 0; margin: 0 1em;}
-#slidecontrols a.next { width: 12px; height: 12px; background: url('../images/controls.png') -27px 0;}
-
-#slidecontrols a.prev:hover { background: url('../images/controls.png') 0 -12px;}
-#slidecontrols a.thumbs:hover { background: url('../images/controls.png') -13px -12px;}
-#slidecontrols a.next:hover { background: url('../images/controls.png') -27px -12px;}
-
-#slidecontrols a.prev:active { background: url('../images/controls.png') 0 -36px;}
-#slidecontrols a.thumbs:active { background: url('../images/controls.png') -13px -36px;}
-#slidecontrols a.next:active { background: url('../images/controls.png') -27px -36px;}
-
-#slidecontrols a.prev.inactive { background: url('../images/controls.png') 0 -24px;}
-#slidecontrols a.thumbs.inactive { background: url('../images/controls.png') -13px -24px;}
-#slidecontrols a.next.inactive { background: url('../images/controls.png') -27px -24px;}
-
 
 
 a.cursornext { cursor: url("../images/cursor-next.cur"), pointer; }
 a.cursorprev { cursor: url("../images/cursor-prev.cur"), pointer; }
 
-
-a.next.inactive { background: url('../images/controls.png') -27px -24px;}
 
 .thumbnails {width: 870px; margin: auto; overflow: hidden; display: none; text-align: center;}
 .thumbnails .thumb {display: inline; cursor: pointer; }
