--- a/skins/lagos.css
+++ b/skins/lagos.css
@@ -56,6 +56,8 @@ margin: auto;
 position: relative;
 }
 
+.imagewrap { margin: auto;}
+
 .thumbnails {padding-bottom: 3em; width: 870px; }
 
 .description p {margin: 1em 0 0 0; font-size: 10px; color: #939598; }
