--- a/skins/delhi.css
+++ b/skins/delhi.css
@@ -3,21 +3,22 @@ Skin Name: Delhi
 */
 
 
-body {text-align: left; background: #fff; color: #666; font-size: 14px; font-family: "franklin-gothic-urw", Helvetica, sans-serif; margin: 0; padding: 0;}
+body {text-align: left; background: #fff; color: #999; font-size: 16px; line-height: 1.6; font-family: "franklin-gothic-urw", Helvetica, sans-serif; margin: 0; padding: 0;}
 
 .page {padding: 2.5em 0; position: relative;}
 
-h1 { font-size: 18px; margin-bottom: 2em; padding-bottom: .5em; text-transform: uppercase; font-weight: normal; display: inline-block; border-bottom: 1px solid #999;}
+h1 { font-size: 24px; margin-bottom: 1.5em; display: inline-block; border-bottom: 1px solid #a83a22; }
+
 h2 { font-size: 14px; margin-bottom: 2em;}
 h2 span {font-weight: lighter; padding-left: .5em;}
 
-a {color: #CC9933; text-decoration: none;}
-a:hover {color: #333;}
+a {color: #666; text-decoration: none;}
+a:hover {color: #a83a22;}
 a img {border: 0;}
 
-.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #666;}
+.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #a83a22;}
 
-#header { padding: 0 2em 4em 2em; overflow: hidden; margin: auto; text-align: center;}
+#header { padding: 0 2em 2em 2em; overflow: hidden; margin: auto; text-align: center;}
 #header .menu-navigation-container {}
 
 #header ul { padding: 0; list-style: none; display: inline}
@@ -25,10 +26,7 @@ a img {border: 0;}
 
 #header ul li {padding: 0 .8em; }
 
-.line { border-left: 1px solid #999; padding-left: 2em !important; margin-left: 1em !important; }
-
-.fullscreen { position: absolute; top: 0; right: 0; padding: 1em !important; display: block;}
-.fullscreen a {padding-right: 1.5em; background: url(../images/fullscreen.png) no-repeat center right; color: #999}
+.line { border-left: 1px solid #a83a22; padding-left: 2em !important; margin-left: 1em !important; }
 
 .subnav ul li a { padding: .5em 0 .5em 1em; }
 
@@ -44,20 +42,18 @@ a img {border: 0;}
 .info, .blog  { width: 500px; margin: auto; line-height: 2; }
 
 .blog .post {overflow: hidden;}
-.separator { width: 100px; margin: 50px auto; border-top: 1px solid #000; display: block;}
+.separator { width: 100px; margin: 50px auto; border-top: 1px solid #ccc; display: block;}
 
 .alignright { display: inline; float: right; margin: 0 0 1em 2em}
 .alignleft { display: inline; float: left; margin: 0 2em 1em 0}
 .aligncenter { clear: both; display: block; margin-left: auto; margin-right: auto; }
 
-.credit {font-size: .8em; float: left; padding-top: 1em;}
+.credit {font-size: .9em; float: left; padding-top: 1em;}
 	
 .simplepage {width: 500px; margin: auto; line-height: 2;}
 .randomimage {text-align: center; }
 
 .blank .gallerycontent {text-align: center; padding-bottom: 3em;}
-
-
 
 
 
