--- a/skins/delhi.css
+++ b/skins/delhi.css
@@ -1,32 +1,47 @@
 /*  
 Skin Name: Delhi
+
+, sans-serif;
+"franklin-gothic-urw"
+
 */
 
 
-body {text-align: left; background: #fff; color: #999; font-size: 16px; line-height: 1.6; font-family: "franklin-gothic-urw", Helvetica, sans-serif; margin: 0; padding: 0;}
+body {text-align: left; background: #fff; color: #8C8C8C; font-size: 16px; line-height: 1.5; font-family: "Aften Screen", serif; margin: 0; padding: 0;}
 
-.page {padding: 2.5em 0; position: relative;}
+.page {position: relative; margin: 3em 1em;}
 
-h1 { font-size: 24px; margin-bottom: 1.5em; display: inline-block; border-bottom: 1px solid #a83a22; }
+h1 { font-size: 24px; margin: 0; display: inline-block;  font-weight: normal;}
 
 h2 { font-size: 14px; margin-bottom: 2em;}
 h2 span {font-weight: lighter; padding-left: .5em;}
 
-a {color: #666; text-decoration: none;}
-a:hover {color: #a83a22;}
+a {color: #a84222; text-decoration: none;}
+a:hover {color: #666;}
 a img {border: 0;}
 
-.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #a83a22;}
 
-#header { padding: 0 2em 2em 2em; overflow: hidden; margin: auto; text-align: center;}
-#header .menu-navigation-container {}
+
+
+
+#header { overflow: hidden; margin: auto; text-align: center; }
+#header .menu-navigation-container {margin: 2em 1em;}
+
+#header a {color: #666; text-decoration: none;}
+#header a:hover {color: #a84222;}
+
+#slidecontrols a {color: #666; text-decoration: none;}
+#slidecontrols a:hover {color: #a84222;}
+
+#header .current-menu-item a, #header .current_page_ancestor a, #header .current-post-ancestor a { color: #a84222;}
+
 
 #header ul { padding: 0; list-style: none; display: inline}
 #header ul li {margin: 0; display: inline; }
 
 #header ul li {padding: 0 .8em; }
 
-.line { border-left: 1px solid #a83a22; padding-left: 2em !important; margin-left: 1em !important; }
+.line { border-left: 1px solid #a84222; padding-left: 2em !important; margin-left: 1em !important; }
 
 .subnav ul li a { padding: .5em 0 .5em 1em; }
 
