--- a/skins/delhi.css
+++ b/skins/delhi.css
@@ -39,7 +39,7 @@ a img {border: 0;}
 #header ul { padding: 0; list-style: none; display: inline}
 #header ul li {margin: 0; display: inline; }
 
-#header ul li {padding: 0 .8em; }
+#header ul li {padding: 0 .8em; white-space: nowrap; }
 
 .line { border-left: 1px solid #a84222; padding-left: 2em !important; margin-left: 1em !important; }
 
@@ -80,11 +80,12 @@ margin: auto;
 position: relative;
 }
 
-
 .imagewrap { margin: auto;}
 
 .thumbnails {padding-bottom: 3em; width: 870px; }
 
+.textslide .longdescription {width: 665px; margin: auto;}
+.spreadslide .longdescription {padding-left: 2em;}
 
 .description {text-align: right; color: #999; margin: .5em 0 1em 0;}
 .description p {margin: .5em 0 0 0; font-size: 11px;}
@@ -103,4 +104,4 @@ a.cursorprev { cursor: url("../images/cursor-prev.cur"), pointer; }
 .masonrythumbs .thumbnail h3 {}
 .masonrythumbs .thumbnail h3 a {font-weight: normal;}
 
-.spreadslide .imagewrap {float: left; padding-right: 2em;}
+.spreadslide .imagewrap {float: left; }
