--- a/skins/delhi.css
+++ b/skins/delhi.css
@@ -42,26 +42,41 @@ blockquote {margin: auto 0 0 0; font-size: 1.5em; font-style: italic; clear: bot
 blockquote p {margin-bottom: 0; }
 
 
-#header { overflow: hidden; margin: auto; text-align: center; }
-#header .menu-navigation-container {margin: 2em 1em;}
+#header { overflow: hidden; margin: auto; text-align: center; width: 1000px; }
+#header .menu-navigation-container {margin: .5em 0 3em 0; float: left;}
 
 #header a {color: #666; text-decoration: none;}
 #header a:hover {color: #a8223e;}
 
+#header h1 {float: right;}
 #header h1 a {color: #a8223e;}
 
 #slidecontrols a {color: #666; text-decoration: none;}
 #slidecontrols a:hover {color: #a8223e;}
 
-#header .current-menu-item a, #header .current_page_ancestor a, #header .current-post-ancestor a { color: #a8223e;}
-
 
 #header ul { padding: 0; list-style: none; display: inline}
 #header ul li {margin: 0; display: inline; }
 
-#header ul li {padding: 0 .8em; white-space: nowrap; }
+#header ul li {padding: 0 1.6em 0 0; white-space: nowrap; position: relative}
 
-.line { border-left: 1px solid #a8223e; padding-left: 2em !important; margin-left: 1em !important; }
+#header ul li ul {visibility: hidden; position: absolute; left: 0; top: 1.6em; }
+
+#header .current-menu-item a, #header .current_page_ancestor a, #header .current-post-ancestor a, #header .current-menu-ancestor a { color: #a8223e;}
+#header .current-menu-item ul, #header .current_page_ancestor ul, #header .current-post-ancestor ul, #header .current-menu-ancestor ul { visibility: visible; }
+#header .current-menu-item ul a, #header .current_page_ancestor ul a, #header .current-post-ancestor ul a, #header .current-menu-ancestor ul a {color: #666;}
+
+#header .current-menu-item ul .current_page_ancestor a, 
+#header .current_page_ancestor ul .current_page_ancestor a, 
+#header .current-post-ancestor ul .current_page_ancestor a, 
+#header .current-menu-item ul .current-menu-item a, 
+#header .current_page_ancestor ul .current-menu-item a, 
+#header .current-post-ancestor ul .current-menu-item a,
+#header .current-menu-ancestor ul .current-menu-item a,
+#header .current-menu-ancestor ul .current-menu-ancestor a
+{color: #a8223e;}
+
+.line { border-left: 1px solid #a8223e; padding-left: 2em !important; margin-left: .4em !important; }
 
 
 
