--- a/skins/carolyndrake.css
+++ b/skins/carolyndrake.css
@@ -1,5 +1,5 @@
 /*  
-Skin Name: Istanbul
+Skin Name: Carolyn Drake
 
 font-family:'Century Gothic W01';
 font-family:'CenturyGothicW01-Italic';
@@ -8,8 +8,7 @@ font-family:'CenturyGothicW01-BoldIt';
 
 */
 
-
-body {text-align: left; background: #fff; color: #000; font-size: 12px; font-family: 'Century Gothic W01', Helvetica, sans-serif; margin: 0; padding: 2em 0;}
+body {text-align: left; background: #fff; color: #000; font-size: 12px; font-family: 'Century Gothic W01', Helvetica, sans-serif; margin: 0; padding: 0;}
 
 em, i { font-family: 'CenturyGothicW01-Italic', Helvetica, sans-serif; }
 strong, b {font-family: 'Century Gothic W01 Bold', Helvetica, sans-serif; }
@@ -22,9 +21,9 @@ a {color: #000; text-decoration: none;}
 a:hover {color: #666;}
 a img {border: 0;}
 
-.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a { color: #3C6; text-transform: uppercase; }
+.current-menu-item a, .current_page_ancestor a, .current-post-ancestor a, .current-menu-ancestor a { color: #3C6; text-transform: uppercase; }
 
-#header { padding: 0 2em 2em 2em; overflow: hidden; margin: auto; }
+#header { padding: 2em; overflow: hidden; margin: auto; }
 
 #header ul { padding: 0; list-style: none; }
 #header ul li {margin: 0; display: inline; }
@@ -33,7 +32,7 @@ a img {border: 0;}
 #header ul li {padding: 0 .8em; }
 .subnav ul li a { padding: .5em 0 .5em 1em; }
 
-.subnav {clear: both; padding: 1em; text-align: center; overflow: hidden;}
+.subnav {clear: both; padding: 1em 1em 3em 1em; text-align: center; overflow: hidden;}
 .subnav ul {list-style: none; margin: 0; padding: 0; }
 .subnav ul li { margin: 0; padding: 0; display: inline;}
 .subnav ul li a { display: inline-block; padding: .5em; }
@@ -55,24 +54,6 @@ a img {border: 0;}
 .simplepage {width: 500px; margin: auto; line-height: 2;}
 .randomimage {text-align: center; }
 
-/* Slideshow
-
-.gallerycontent { margin-left: 3em;}
-
-.imagewrap { margin: auto;}
-
-#gallerywrapper, .gallery-fade {
-overflow: hidden;
-margin: auto;
-position: relative;
-}
-
-.thumbnails {padding-bottom: 3em; width: 870px; }
-
-.description {text-align: right; color: #999; margin: .5em 0 1em 0;}
-
-
-*/
 
 
 #gallerywrapper {margin: auto;}
@@ -84,7 +65,6 @@ position: relative;
 
 .imagewrap {margin: auto;}
 
-.longdescription {padding-left: 2em;}
 
 /* .description {text-align: left; color: #999; margin: 1em 0 0 0; width: 450px; float: left;}*/
 .description {text-align: right; color: #999; margin: .5em 0 1em 0;}
@@ -96,7 +76,7 @@ position: relative;
 
 
 
-#slidecontrols {text-align: center;}
+#slidecontrols {text-align: center; padding-bottom: 2em;}
 #slidecontrols span {display: none}
 
 #slidecontrols a {display: inline-block;}
@@ -121,4 +101,9 @@ a.next.inactive { background: url('../images/controls.png') -27px -24px;}
 .thumbnails {width: 870px; margin: auto; overflow: hidden; text-align: center;}
 .thumbnails .thumb {display: inline; cursor: pointer; }
 .thumbnails .thumb img {border: .5em solid #fff;}
-	
+
+.longdescription {  width: 500px; margin: auto; line-height: 2; }	
+
+#scrollwrapper { padding: 0 0 46px 2em; margin-bottom: 19.5px; }
+#scrollwrapper .column {padding-right: 2em; }
+#scrollwrapper p { line-height: 0; }
